--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -10,9 +10,13 @@
 	<title>Contato</title>
 </head>
 <body>
+	<p class="mensage">Bem Vindo a Casa do Microondas</p>
 	<header>
 		<div class="inicio">
-			<h1 class="nome"><strong>Casa do Microondas</strong></h1>
+			<div class="inicio_barra">
+                <i id="barra_lateral_esquerdo" class="fa-solid fa-bars"></i>
+                <h1 class="nome"><strong>Casa do Microondas</strong></h1>
+            </div>
 			<nav class="navegacao">
 				<a class="navegacao_botao" href="../index.html">home</a>
 				<a class="navegacao_botao" href="./localization.html">localização</a>
@@ -57,21 +61,20 @@
                         <div class="footer_links">                                                       
                                 <div class="links_rapidos">                                                    
                                         <p>links rápidos</p>                                          
-                                        <li><a href="">About</a></li>
-                                        <li><a href="">My account</a></li>
-                                        <li><a href="">My orders</a></li>
+                                        <li><a href="./error.html">Sobre nós</a></li>
+                                        <li><a href="./account_login.html">Minha conta</a></li>
                                 </div>
                                 <div class="links_rapidos">
                                         <p>Customer Care</p>                                        
-                                        <li><a href="">Contact Us</a></li>
-                                        <li><a href="">FAQs</a></li>
+                                        <li><a href="./contact.html">Contate-nos</a></li>
+                                        <li><a href="./error.html">FAQs</a></li>
                                 </div>                
                         </div>                                                    
                 </div>                                     
                 <div class="footer_footer">                           
                         <div class="rodape_esc">                              
-                                <a class="rodape_botao" href="">Sobre nós</a>
-                                <a class="rodape_botao" href="">Contate-nos</a>                                        
+                                <a class="rodape_botao" href="./error.html">Sobre nós</a>
+                                <a class="rodape_botao" href="./contact.html">Contate-nos</a>                                        
                         </div>            
                         <p>© 2024 Casa do Microondas. Todos os direitos reservados.</p>
                 </div>                                
