--- a/src/html/informations.html
+++ b/src/html/informations.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+        <p class="mensage">Bem Vindo a Casa do Microondas</p>
 	<header>    
                 <div class="inicio">    
-                        <h1 class="nome"><strong>Casa do Microondas</strong></h1>    
+                        <div class="inicio_barra">
+                                <i id="barra_lateral_esquerdo" class="fa-solid fa-bars"></i>
+                                <h1 class="nome"><strong>Casa do Microondas</strong></h1>
+                            </div>
                         <nav class="navegacao">    
                                 <a class="navegacao_botao" href="../index.html">home</a>    
                                 <a class="navegacao_botao" href="./localization.html">localização</a>    
@@ -19,10 +23,13 @@
                                 <a class="navegacao_botao" href="./contact.html">contato</a>    
                         </nav>    
                         <div class="utilidades">    
-                                <button class="botao"><i class="fa-regular fa-moon"></i>   Night</button>    
-                                <a href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>    
+                                <button class="botao"><i class="fa-regular fa-moon"></i> Night</button> 
+                                <button class="botao"><i class="fa-solid fa-magnifying-glass"></i></button>
+                                <a href="./account_login.html"><i id="icon" class="fa-regular fa-user"></i></a>                            
+                                <button class="botao"><i class="fa-solid fa-cart-shopping"></i></button>    
+                                <!--<a href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>    
                                 <a href="./account_login.html"><i id="icon" class="fa-regular fa-user"></i></a>    
-                                <a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>    
+                                <a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>-->    
                         </div>    
                 </div>    
         </header>
@@ -32,7 +39,6 @@
         </div>
         <h1 class="title">conserto em 30 minutos</h1>
         <div class="text_info">
-            <h2 class="subtitle">conserto em 30 minutos</h2>
             <p>INFORMAMOS AOS NOSSOS CLIENTES QUE ORÇAMENTO E CONSERTO EM 30 MINUTOS SERÃO REALIZADOS DESDE QUE:</p>
             <h3><li>O CLIENTE AGUARDE NO BALCÃO;</li></h3>
             <p>A PREFERENCIA SERÁ DE QUEM ESTIVER AGUARDANDO</p><br>
@@ -58,27 +64,26 @@
                                 <h1>Casa do Microondas</h1>
                                 <p>Uma loja para quem quer comprar menos, mas melhor. Oferecemos uma coleção exclusiva de itens de alta qualidade para cada casa.</p>
                                 <div class="social_media">                                                    
-                                        <a href=""><i class="fa-brands fa-whatsapp"></i></a>                            
+                                        <a href="./error.html"><i class="fa-brands fa-whatsapp"></i></a>                            
                                 </div>              
                         </div>                                                                               
                         <div class="footer_links">                                                       
                                 <div class="links_rapidos">                                                    
                                         <p>links rápidos</p>                                          
-                                        <li><a href="">About</a></li>
-                                        <li><a href="">My account</a></li>
-                                        <li><a href="">My orders</a></li>
+                                        <li><a href="./error.html">Sobre nós</a></li>
+                                        <li><a href="./account_login.html">Minha conta</a></li>
                                 </div>
                                 <div class="links_rapidos">
                                         <p>Customer Care</p>                                        
-                                        <li><a href="">Contact Us</a></li>
-                                        <li><a href="">FAQs</a></li>
+                                        <li><a href="./contact.html">Contact Us</a></li>
+                                        <li><a href="./error.html">FAQs</a></li>
                                 </div>                
                         </div>                                                    
                 </div>                                     
                 <div class="footer_footer">                           
                         <div class="rodape_esc">                              
-                                <a class="rodape_botao" href="">Sobre nós</a>
-                                <a class="rodape_botao" href="">Contate-nos</a>                                        
+                                <a class="rodape_botao" href="./error.html">Sobre nós</a>
+                                <a class="rodape_botao" href="./contact.html">Contate-nos</a>                                        
                         </div>            
                         <p>© 2024 Casa do Microondas. Todos os direitos reservados.</p>
                 </div>
