--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div class="inicio">
 			<div class="inicio_barra">
-                <i class="fa-solid fa-bars"></i>
+                <i id="barra_lateral_esquerdo" class="fa-solid fa-bars"></i>
                 <h1 class="nome"><strong>Casa do Microondas</strong></h1>
             </div>
 			<nav class="navegacao">
@@ -23,10 +23,10 @@
 				<a class="navegacao_botao" href="./html/contact.html">contato</a>
 			</nav>
 			<div class="utilidades">
-				<button class="botao"><i id="icon_moon" class="fa-regular fa-moon"></i>Night</button>
-				<a href=""><i id="icon" class="fa-solid fa-magnifying-glass"></i></a>
-				<a href="./html/account_login.html"><i id="icon" class="fa-regular fa-user"></i></a>
-				<a href=""><i id="icon" class="fa-solid fa-cart-shopping"></i></a>
+				<button class="botao"><i class="fa-regular fa-moon"></i> Night</button> 
+                <button class="botao"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <a href="../src/html/account_login.html"><i id="icon" class="fa-regular fa-user"></i></a>                            
+                <button class="botao"><i class="fa-solid fa-cart-shopping"></i></button>    
 			</div>
 		</div>
 	</header>
@@ -116,13 +116,22 @@
 		</section>
 		<section class="info">
 			<div class="info_coluna">
-				<img class="info_img"  class="info_texto" src="./img/conserto-microondas.jpg" alt="">
+				<a href="./html/error.html">
+                    <img class="info_img"  class="info_texto" src="./img/conserto-microondas.jpg" alt="">
+                    <p>Conserto microondas</p>
+                </a>
 			</div>
 			<div class="info_coluna">
-				<img class="info_img" src="./img/conserto-forno-eletrico.jpg" alt="">
+				<a href="./html/error.html">
+                    <img class="info_img" src="./img/conserto-forno-eletrico.jpg" alt="">
+                    <p>Conserto forno-eletrico</p>
+                </a>
 			</div>
 			<div class="info_coluna">
-				<img class="info_img" src="./img/refora-microondas.jpg" alt="">
+				<a href="./html/error.html">
+                    <img class="info_img" src="./img/refora-microondas.jpg" alt="">
+                    <p>Reforma microondas</p>
+                </a>
 			</div>
 		</section>
 		<section class="author_section">
@@ -140,13 +149,22 @@
 		</section>
 		<section class="info">
 			<div class="info_coluna">
-				<img class="info_img" src="./img/acessorio.jpg" alt="">
+				<a href="./html/error.html">
+                    <img class="info_img" src="./img/acessorio.jpg" alt="">
+                    <p>Acessórios</p>
+                </a>
 			</div>
 			<div class="info_coluna">
-				<img class="info_img" src="./img/venda-microondas.jpg" alt="">
+				<a href="./html/error.html">
+                    <img class="info_img" src="./img/venda-microondas.jpg" alt="">
+                    <p>Venda microondas</p>
+                </a>
 			</div>
 			<div class="info_coluna">
-				<img class="info_img" src="./img/busca-e-entrega.jpg" alt="">
+				<a href="./html/error.html">
+                    <img class="info_img" src="./img/busca-e-entrega.jpg" alt="">
+                    <p>Busca e entrega</p>
+                </a>
 			</div>
 		</section>
 		<section class="gta">
@@ -174,27 +192,26 @@
 				<h1>Casa do Microondas</h1>
 				<p>Uma loja para quem quer comprar menos, mas melhor. Oferecemos uma coleção exclusiva de itens de alta qualidade para cada casa.</p>
 				<div class="social_media">
-					<a href=""><i class="fa-brands fa-whatsapp"></i></a>
+					<a href="./html/error.html"><i class="fa-brands fa-whatsapp"></i></a>
 				</div>
 			</div>
 			<div class="footer_links">
 				<div class="links_rapidos">
 					<p>links rápidos</p>
-					<li><a href="">About</a></li>
-					<li><a href="">My account</a></li>
-					<li><a href="">My orders</a></li>
+					<li><a href="./html/error.html">Nossa história</a></li>
+					<li><a href="./html/account_login.html">Minha conta</a></li>
 				</div>
 				<div class="links_rapidos">
 					<p>Customer Care</p>
-					<li><a href="">Contact Us</a></li>
-					<li><a href="">FAQs</a></li>
+					<li><a href="./html/contact.html">Contate-nos</a></li>
+					<li><a href="./html/error.html">FAQs</a></li>
 				</div>
 			</div>
 		</div>
 		<div class="footer_footer">
 			<div class="rodape_esc">
-				<a class="rodape_botao" href="">Sobre nós</a>
-				<a class="rodape_botao" href="">Contate-nos</a>
+				<a class="rodape_botao" href="./html/error.html">Sobre nós</a>
+				<a class="rodape_botao" href="./html/contact.html">Contate-nos</a>
 			</div>
 			<p>© 2024 Casa do Microondas. Todos os direitos reservados.</p>
 		</div>
