--- a/src/html/account_login.html
+++ b/src/html/account_login.html
@@ -61,7 +61,7 @@
                 <h1>Casa do Microondas</h1>
                 <p>Uma loja para quem quer comprar menos, mas melhor. Oferecemos uma coleção exclusiva de itens de alta qualidade para cada casa.</p>
                 <div class="social_media">
-                    <a href=""><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="./error.html"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="footer_links">
