adição de social midia

--- a/src/index.html
+++ b/src/index.html
@@ -193,6 +193,8 @@
 				<p>Uma loja para quem quer comprar menos, mas melhor. Oferecemos uma coleção exclusiva de itens de alta qualidade para cada casa.</p>
 				<div class="social_media">
 					<a href="./html/error.html"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://br.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
 				</div>
 			</div>
 			<div class="footer_links">
