alteração do icone e funcionalidade do whatsapp

--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
 				<h1>Casa do Microondas</h1>
 				<p>Uma loja para quem quer comprar menos, mas melhor. Oferecemos uma coleção exclusiva de itens de alta qualidade para cada casa.</p>
 				<div class="social_media">
-					<a href="./html/error.html"><i class="fa-brands fa-whatsapp"></i></a>
+					<a href="https://wa.me/5541987327813"><i class="fa-brands fa-whatsapp"></i></a>
                     <a href="https://br.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
 				</div>
