alterações do index 2

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Bem vindo a Casa do Microondas</title>
-	<link rel="stylesheet" href="./css/style.css">
-	<link rel="stylesheet" href="./css/index.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
+	<link rel="stylesheet" href="./assets/css/index.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body id="corpo">
@@ -25,7 +25,7 @@
 			<div class="utilidades">
 				<button class="botao"><i class="fa-regular fa-moon"></i> Night</button> 
                 <button class="botao"><i class="fa-solid fa-magnifying-glass"></i></button>
-                <a href="../src/html/account_login.html"><i id="icon" class="fa-regular fa-user"></i></a>                            
+                <a href="./html/account_login.html"> <i class="fa-solid fa-right-to-bracket"></i></a>                            
                 <button class="botao"><i class="fa-solid fa-cart-shopping"></i></button>    
 			</div>
 		</div>
@@ -73,8 +73,16 @@
                 </div>
             </div>
         </div>
+		<h2 class="msg_bemvindo">Bem vindo(a) Fulano</h2>
+		<div class="navegacao_usuario">
+			<nav >
+				<a href="">Meus Orçamentos</a>
+				<a href="">Meus Endereços</a>
+				<a href="">Meus Dados</a>
+			</nav>
+		</div>
 		<div class="imagem_principal">
-			<img class="imagem_principal_conteudo" src="./img/cabecalho.png" alt="">
+			<img class="imagem_principal_conteudo" src="../public/cabecalho.png" alt="">
 		</div>
 		<section class="shop">
 			<div class="shop_content">
