--- a/client/src/index.html
+++ b/client/src/index.html
@@ -193,6 +193,12 @@
 				</div>
 			</div>
 		</section>
+		<section>
+			<ul>
+				<li>{data.titulo_servico}</li>
+				<li>{data.desc_servico}</li>
+			</ul>
+		</section>
 	</main>
 	<footer>
 		<div class="footer_content">
